changes to fix some alignment issues, mentioned JIRA for doc url and other feedback changes

--- a/src/app/components/core/manage-services/list-manage-services.component.css
+++ b/src/app/components/core/manage-services/list-manage-services.component.css
@@ -21,6 +21,10 @@ tr:hover .btn-delete {
     font-size: 0.85rem;
 }
 
+.service-table {
+    width: 50%;
+}
+
 #refresh-check {
     margin-left: 3px;
 }
